force-app/main/default/objects/Product2/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>URL to product image</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>