force-app/main/default/objects/Product2/fields/InStock__c.field-meta.xml
<CustomField>
    <fullName>InStock__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the product is currently in stock</description>
    <label>In Stock</label>
    <type>Checkbox</type>
</CustomField>