force-app/main/default/objects/Product2/fields/IsBulk__c.field-meta.xml
<CustomField>
    <fullName>IsBulk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this product is available for bulk purchase</description>
    <label>Is Bulk</label>
    <type>Checkbox</type>
</CustomField>