force-app/main/default/objects/Product2/fields/IsPro__c.field-meta.xml
<CustomField>
    <fullName>IsPro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a professional-grade product</description>
    <label>Is Pro</label>
    <type>Checkbox</type>
</CustomField>