force-app/main/default/objects/Product2/fields/ProjectTypes__c.field-meta.xml
<CustomField>
    <fullName>ProjectTypes__c</fullName>
    <description>Semicolon-separated list of project types this product is suitable for</description>
    <label>Project Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>