force-app/main/default/objects/Product2/fields/SkillLevel__c.field-meta.xml
<CustomField>
    <fullName>SkillLevel__c</fullName>
    <description>Recommended skill level for using this product</description>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>beginner</fullName>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>intermediate</fullName>
                <label>Intermediate</label>
            </value>
            <value>
                <fullName>advanced</fullName>
                <label>Advanced</label>
            </value>
            <value>
                <fullName>professional</fullName>
                <label>Professional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>